# rgf

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  helloworld.cpp  rendertarget.cpp
examples/drawtriangle/: CMakeLists.txt  drawtriangle.cpp  drawtriangle_ps.h  drawtriangle_vs.h  drawtriangle_vs.hlsl
examples/hellowindow/: CMakeLists.txt  hellowindow.cpp
include/: define.h  device.h  object.h  rdevice.h  rendertarget.h  resource.h  rgf.h  robject.h  rpass.h  rrendertarget.h  rresource.h  rtexture.h  rvertex.h  rwindow.h  window.h
include/rgf/: define.h  device.h  rgf.h  window.h
source/: CMakeLists.txt  RGF.cpp  RGF1.cpp  cmdList.h  descriptor.h  device.cpp  gbuffer_ps.h  pass.h  post_ps_shader.h  post_vs_shader.h  rdevice.cpp  rendertarget.cpp  resource.cpp  rgf.cpp  rpass.cpp  rrendertarget.cpp  rresource.cpp  rtexture.cpp  rwindow.cpp  window.cpp
source/shader/ps/: device.h  gbuffer.h
source/shader/vs/: device.h  gbuffer.h
third/lib/: D3D12MA.lib
